--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "@solana/web3.js": "^1.77.3",
+    "tsc": "^2.0.4"
   }
 }
